Prevent content from being hidden underneath the Virtual Keyboard

--- a/public/bundle.css
+++ b/public/bundle.css
@@ -186,7 +186,6 @@ body {
   font-size: 11px;
   color: var(--text-color);
   -webkit-font-smoothing: none;
-  border: 1px solid #555555;
 }
 img {
   image-rendering: pixelated;
@@ -267,14 +266,15 @@ img {
 .loader.retro-component.index-2 {
   padding: 8px;
 }
-html,
-body {
-  overflow: hidden;
-}
 .layout {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  border: 1px solid #555555;
 }
 .layout > main {
   flex-grow: 1;
@@ -562,20 +562,6 @@ body {
   width: 100%;
   min-height: 0;
 }
-.chat-room > .message-list {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  padding: 8px;
-  min-height: 0;
-}
-.chat-room > .message-list > .container {
-  background: var(--button-highlight);
-  box-shadow: var(--border-field);
-  padding: 6px;
-  flex-grow: 1;
-  overflow-y: auto;
-}
 .chat-room > .message-input {
   padding: 8px;
   padding-top: 0;
@@ -630,10 +616,25 @@ body {
   outline: 1px dotted #000000;
   outline-offset: -4px;
 }
+.message-list {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+  min-height: 0;
+}
 .message-list > .container {
+  background: var(--button-highlight);
+  box-shadow: var(--border-field);
+  padding: 6px;
+  flex-grow: 1;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: 4px;
+}
+.message-list > .container > .blank {
+  flex-grow: 1;
 }
 .message-item {
   display: flex;
