--- a/public/style/main.less
+++ b/public/style/main.less
@@ -1,10 +1,5 @@
 @import "../../../retro-style/index.less";
 
-html,
-body {
-    overflow: hidden;
-}
-
 @import "view/layout.less";
 @import "view/room.less";
 
