--- a/public/style/view/layout.less
+++ b/public/style/view/layout.less
@@ -1,7 +1,12 @@
 .layout {
+    position      : fixed;
+    left          : 0;
+    top           : 0;
+    width         : 100%;
     height        : 100%;
     display       : flex;
     flex-direction: column;
+    border        : 1px solid #555555;
 
     >main {
         flex-grow : 1;
